Fix scaling issue on mobile

--- a/styles/passion-projects.css
+++ b/styles/passion-projects.css
@@ -74,7 +74,7 @@
     position: relative;
 
     width: 100%;
-    height: 100vh;
+    height: 80vh;
 }
 
 
